[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-generator"
version = "2.0.0"
description = "AI-powered subtitle generation tool using Whisper.cpp"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ved Gupta", email = "vedgupta@protonmail.com"}
]
maintainers = [
    {name = "Ved Gupta", email = "vedgupta@protonmail.com"}
]
keywords = [
    "subtitle",
    "transcription",
    "whisper",
    "ai",
    "speech-to-text",
    "video",
    "audio",
    "srt",
    "vtt",
    "innovatorved"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    # Core dependencies (verified imports in src/)
    "ffmpeg-python>=0.2.0",  # src/core/video_processor.py
    "tqdm>=4.66.0",          # src/models/model_manager.py, src/utils/downloader.py
    "pyyaml>=6.0.0",         # src/config/config_loader.py
    "gdown>=4.7.0",          # src/utils/downloader.py (lazy import for Google Drive)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/innovatorved/subtitle"
Documentation = "https://github.com/innovatorved/subtitle#readme"
Repository = "https://github.com/innovatorved/subtitle.git"
Issues = "https://github.com/innovatorved/subtitle/issues"
Changelog = "https://github.com/innovatorved/subtitle/releases"

[project.scripts]
subtitle = "src.cli.commands:main"

[tool.setuptools]
packages = ["src", "src.cli", "src.config", "src.core", "src.models", "src.utils"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | whisper\.cpp
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "whisper.cpp", "build", "dist"]
known_first_party = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["whisper.cpp", "build", "dist"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "whisper.cpp/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
