[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-generator"
version = "3.0.5"
description = "AI-powered subtitle generation from video/audio using Whisper."
readme = "PYPI_README.md"
license = {text = "MIT"}
authors = [
    {name = "Ved Gupta", email = "vedgupta@protonmail.com"}
]
maintainers = [
    {name = "Ved Gupta", email = "vedgupta@protonmail.com"}
]
keywords = [
    "subtitle",
    "transcription",
    "whisper",
    "ai",
    "speech-to-text",
    "video",
    "audio",
    "srt",
    "vtt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "tqdm>=4.66.0",
    "gdown>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/innovatorved/subtitle"
Documentation = "https://github.com/innovatorved/subtitle#readme"
Repository = "https://github.com/innovatorved/subtitle.git"
Issues = "https://github.com/innovatorved/subtitle/issues"
Changelog = "https://github.com/innovatorved/subtitle/releases"

[project.scripts]
subtitle = "subtitle_generator.cli.commands:main"

[tool.setuptools]
packages = [
    "subtitle_generator",
    "subtitle_generator.cli",
    "subtitle_generator.core",
    "subtitle_generator.models",
    "subtitle_generator.utils",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
